# KuberAIQ

./: .env.gcp.example  .env.prod.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  gunicorn_conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_onboarding.py  003_research_enhancements.py  004_collections_upi.py  005_compliance_tracking.py  006_google_auth.py  007_track_b_c.py  008_subscriptions.py  009_ca_clients.py  010_user_whatsapp_phone.py  011_kuberaiq_tiers_1_5_mvp.py  012_msme_segment.py  013_ca_client_tasks.py  014_company_is_active.py  015_stock_movements.py  016_ca_firms.py
backend/app/: main.py
backend/app/api/: deps.py  middleware.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  constants.py  container.py  datetime_utils.py  errors.py  gst_product_catalog.py  integration_modes.py  logging.py  metrics.py  security.py
backend/app/domain/: enums.py  exceptions.py
backend/app/startup/: seed.py
backend/app/workers/: jobs.py  scheduler.py
backend/tests/: conftest.py
backend/tests/agents/: test_collections_agent.py  test_copilot_graph.py  test_mock_llm.py  test_router.py
backend/tests/api/: test_admin.py  test_ai.py  test_auth.py  test_billing.py  test_billing_enforcement.py  test_ca.py  test_collections.py  test_compliance.py  test_compliance_obligations.py  test_counter_bill.py  test_customer_lifecycle.py  test_customers.py  test_dashboard.py  test_enhancements.py  test_google_auth.py  test_health.py  test_invoice_lifecycle.py  test_invoices.py  test_payment_webhooks.py  test_products.py  test_quotations.py  test_rbac.py  test_recurring_invoices.py  test_track_b_c.py  test_webhooks.py  test_whatsapp_inbound.py
backend/tests/e2e/: test_smoke_flow.py
(+427 files in other folders)
