[project]
name = "vyaparai-backend"
version = "1.0.0"
description = "VyaparAI — AI Business Manager for Indian MSMEs (FastAPI backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "reportlab>=4.2",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "tenacity>=8.4",
    "structlog>=24.1",
    # AI (optional at runtime; mock used when USE_MOCK_LLM=true)
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
azure = [
    "openai>=1.40",
    "azure-storage-blob>=12.20",
    "azure-identity>=1.17",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["app/domain", "app/application"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "app/infrastructure/pdf/*",
    "app/startup/*",
    "app/main.py",
    "app/infrastructure/db/session.py",
]
